Simplify header/logo margins

--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -48,32 +48,32 @@
 
 <div class="sliding-nav_page">
 
-    <header class="header" role="banner">
-        <div class="wrapper">
-            <button class="sliding-nav_trigger" id="trigger" href="#">
-                <i class="cf-icon cf-icon-menu"></i>
-                <span class="u-visually-hidden">Menu</span>
-            </button>
-            <a href="/">
-                <img class="header_logo u-js-only"
-                     src="/static/img/logo.svg"
-                     onerror="this.onerror=null;this.src='/static/img/logo.png';"
+    <header class="header wrapper" role="banner">
+
+        <button class="sliding-nav_trigger" id="trigger" href="#">
+            <i class="cf-icon cf-icon-menu"></i>
+            <span class="u-visually-hidden">Menu</span>
+        </button>
+
+        <a href="/">
+            <img class="header_logo u-js-only"
+                 src="/static/img/logo.svg"
+                 onerror="this.onerror=null;this.src='/static/img/logo.png';"
+                 alt="Consumer Financial Protection Bureau"
+                 width="262"
+                 height="66">
+            <noscript>
+                <img class="header_logo logo__no-js"
+                     src="/static/img/logo.png"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
                      height="66">
-                <noscript>
-                    <img class="header_logo logo__no-js"
-                         src="/static/img/logo.png"
-                         alt="Consumer Financial Protection Bureau"
-                         width="262"
-                         height="66">
-                </noscript>
-            </a>
+            </noscript>
+        </a>
 
-            <div class="header_misc">
-                Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
-                <a class="header_misc_es">Español</a>
-            </div>
-
+        <div class="header_misc">
+            Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
+            <a class="header_misc_es">Español</a>
         </div>
+
     </header>
