--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -150,7 +150,7 @@
       </div>
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">.header_logo {
-  margin: 30px 15px 1.25em 15px;
+  margin: 30px 0 1.25em 0;
   vertical-align: middle;
 }
 @media only all and (max-width: 50em) {
@@ -512,6 +512,8 @@
     top: 116px;
   }
   [role=&quot;banner&quot;] {
+    max-width: 1140px;
+    padding: 0 30px;
     position: relative;
     top: -54px;
   }
