--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -153,7 +153,7 @@
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">
 .header_logo {
-  margin: 30px 15px 1.25em 15px;
+  margin: 30px 0 1.25em 0;
   vertical-align: middle;
 }
 
@@ -381,6 +381,8 @@
 }
 
 [role=&quot;banner&quot;] {
+  max-width: 1140px;
+  padding: 0 30px;
   position: relative;
   top: -54px;
 }
