--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -56,7 +56,9 @@
 
 <!--[if lt IE 9]>      <link rel="stylesheet" href="/static/css/main.ie.min.css"> <![endif]-->
 <!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/css/main.min.css"> <!--<![endif]-->
-
+    
+    {% block css %}
+    {% endblock css %}
 <!--
     ============
     HEAD SCRIPTS
@@ -142,7 +144,8 @@
 
 <script src="/static/js/main.min.js"></script>
 
-{% block javascript %}{% endblock javascript %}
+{% block javascript %}
+{% endblock javascript %}
 
 </body>
 
