--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -225,7 +225,6 @@
 /* topdoc
     name: Expandable header modifier
     family: cfgov-cf-enhancements
-    
     patterns:
     - name: expandable_header__jump-link (modifier)
       markup: |
@@ -272,7 +271,8 @@
         border: dotted @pacific;
         border-width: 1px 0;
 
-        .expandable_label, .expandable_link {
+        .expandable_label,
+        .expandable_link {
             color: @pacific;
             font-size: 16px;
         }
@@ -282,7 +282,8 @@
             border-style: solid;
             border-color: @pacific-50;
 
-            .expandable_label, .expandable_link {
+            .expandable_label,
+            .expandable_link {
                 color: @pacific-50;
             }
         }
@@ -298,7 +299,8 @@
             border-style: solid;
             border-color: @navy;
 
-            .expandable_label, .expandable_link {
+            .expandable_label,
+            .expandable_link {
                 color: @navy;
             }
         }
