Add margin overrides to media wide-margin modifier at mobile widths. Remove inline style on expandable_header__jump-link doc example.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7418,7 +7418,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     </span>
                 </span>
             </button>
-            <div class="expandable_content" style="margin-top:20px;">
+            <div class="expandable_content">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing
                     elit. Neque ipsa voluptatibus soluta nobis unde quisquam
