--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6496,7 +6496,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     </span>
                 </span>
             </button>
-            <div class="expandable_content" style="margin-top:20px;">
+            <div class="expandable_content">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing
                     elit. Neque ipsa voluptatibus soluta nobis unde quisquam
@@ -13835,12 +13835,18 @@ a.focus .summary_header {
 }
 @media only all and (max-width: 37.4375em) {
   .media_image-container {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 .media_image-container.media_image-container__wide-margin {
   margin-right: 30px;
+}
+@media only all and (max-width: 37.4375em) {
+  .media_image-container.media_image-container__wide-margin {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 .media_image-container__right {
   display: block;
@@ -13855,6 +13861,11 @@ a.focus .summary_header {
 .media_image-container__right.media_image-container__wide-margin {
   margin-left: 30px;
   margin-right: 0;
+}
+@media only all and (max-width: 37.4375em) {
+  .media_image-container__right.media_image-container__wide-margin {
+    margin-left: 0;
+  }
 }
 .media_image {
   display: block;
