--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -8966,6 +8966,18 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
       notes:
         - "Breaks top margin into margin & padding. Useful in combination with
            content_block__border-top to add padding between block contents & border."
+    - name: Padded-bottom modifier
+      markup: |
+        <div class="content_block content_block__padded-bottom content_block__border-bottom">
+            Content block with reduced bottom margin & added bottom padding
+            and border.
+        </div>
+        Content...
+      codenotes:
+        - .content_block.content_block__padded-bottom
+      notes:
+        - "Breaks bottom margin into margin & padding. Useful in combination with
+           content_block__border-bottom to add padding between block contents & border."
     - name: Background modifier
       markup: |
         Main content...
@@ -9093,6 +9105,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .content_block__padded-top {
   padding-top: 1.875em;
   margin-top: 1.875em;
+}
+
+.content_block__padded-bottom {
+  padding-bottom: 1.875em;
+  margin-bottom: 1.875em;
 }
 
 .content_block__sub {
